# micro_template

./: .env.example  .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  build.rs  cargo-generate.toml  clippy.toml  rustfmt.toml
flatbuffers/dto/: login.fbs
flatbuffers/types/: tokens.fbs
src/: config.rs  lib.rs  logging.rs  main.rs
src/bd/: mod.rs
src/db/: mod.rs  team.rs
src/errors/: auth.rs  config.rs  db.rs  mod.rs
src/logic/: mod.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  mod.rs
