[package]
name = "micro_tamplate"
version = "0.1.0"
edition = "2024"

[dependencies]
flatbuffers="25.12.19"
log = "0.4"
shodh-redb = "0.5.0"
thiserror = "2.0.18"
ntex = {version="3.9.6",features=["compio"]}

[build-dependencies]
# flatbuffers-build = "=25.12.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
